Fixing programming category title alignment

--- a/styles.css
+++ b/styles.css
@@ -307,6 +307,8 @@ section h1 {
 .programming-category {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     row-gap: 4rem;
     width: 95%;
 }
